tests/errors/semantics/labelled_call_missing_arg_with_no_default_value.odl
main :: () -> void {
    add :: (a: int, b: int, c: int) -> int {
        return a + b + c;
    };

    s := add(b: 1, c: 1);
    printint(s);
    println();
};
